<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">coinverse</string>

    <!--Manifest-->
    <string name="audio_service_description">Plays Coinverse audiocast content</string>

    <!--Preferences-->
    <string name="first_open">first open</string>
    <string name="user_lat">user latitude</string>
    <string name="user_lng">user longitude</string>

    <!--Home-->
    <string name="profile">Profile</string>
    <string name="app_status">beta</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_status_tools_tip">App Version</string>
    <string name="submit_bug_content_description">Submit bug button.</string>
    <string name="home_menu_content_description">Home menu button.</string>
    <string name="submit_bug">Submit Bug</string>
    <string name="logged_out">logged out</string>
    <string name="mail_to">mailto:</string>
    <string name="error_sign_in_anonymously">Error loading data, please reload the app.</string>

    <!--Price graphs-->
    <string name="asks">asks</string>
    <string name="bids">bids</string>
    <string name="ask">ask</string>
    <string name="bid">bid</string>
    <string name="coinbase">Coinbase</string>
    <string name="binance">Binance</string>
    <string name="kraken">Kraken</string>
    <string name="gemini">Gemini</string>
    <string name="max_min_format">%s: %.5f</string>
    <string name="max_bid">max bid</string>
    <string name="min_ask">min ask</string>
    <string name="price_pair_format">%s-%s</string>
    <string name="timeframe_last_day">Last day</string>

    <!--Content feed-->
    <string name="first_dismiss_attempt">"firstDismiss"</string>
    <string name="preview_content_description">Preview image for content item</string>
    <string name="profile_content_description">User profile login button</string>
    <string name="youtube_content_type_content_description">YouTube icon</string>
    <string name="youtube_logo_content_description">YouTube logo</string>
    <string name="notification_content_description">Message center button.</string>
    <string name="saved_bottomsheet_handle_content_description">Handle to swipe up Saved content screen.</string>
    <string name="empty_content_feed_content_description">Empty main content feed message image.</string>
    <string name="now">now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="a_minute_ago_abbreviate">1 min</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="minutes_ago_abbreviate">min</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="an_hour_ago_abbreviate">1 hr</string>
    <string name="hours_ago">hours ago</string>
    <string name="hours_ago_abbreviate">hrs</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">days ago</string>
    <string name="days_ago_abbreviate">days</string>
    <string name="swipe_right_image">Content swipe right image.</string>
    <string name="no_content_title">All of the content is organized!</string>
    <string name="no_saved_content_title">No Content Saved</string>
    <string name="no_dismissed_content_title">No Content Dismissed</string>
    <string name="no_feed_content_instructions">Explore your saved content or put away the phone and go for a walk.</string>
    <string name="no_saved_content_instructions">Swipe right to save content.</string>
    <string name="no_dismissed_content_instructions">Swipe left to dismiss content.</string>
    <string name="letsGo">Let\'s go!</string>
    <string name="saved">Saved</string>
    <string name="dismissed">Dismissed</string>
    <string name="save">save</string>
    <string name="dismiss">dismiss</string>
    <string name="open_source_tip">Open Content Source</string>
    <string name="share_content_tip">Share Content</string>
    <string name="content_type">Content Type</string>

    <!--Audio-->
    <string name="notification_channel_description">audiocast player</string>
    <string name="wake_lock_media">wake lock media</string>
    <string name="wifi_lock_media">wifi lock media</string>
    <string name="error_generic">Playback failed</string>
    <string name="error_querying_decoders">Unable to query device decoders</string>
    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>
    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <!--Profile-->
    <string name="profile_image">User profile image.</string>
    <string name="dismisses">Dismissed Content</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_out">Sign Out Successful. See you soon!</string>
    <string name="already_signed_out">You\'re already signed out.</string>
    <string name="delete">Remove Account</string>
    <string name="deleted">Bye Felicia! You\'re account has been removed.</string>
    <string name="unable_to_delete">You cannot remove an account if you\'re not logged in.</string>
    <string name="sign_in_explanation">Do more</string>
    <string name="save_and_organize">Save and organize content.</string>
    <string name="community">Help others discover. The homepage surfaces videos based on popularity.</string>
    <string name="sign_in_title">Sign In</string>
    <string name="here_we_go">Here we go!</string>

    <!--Ads-->
    <string name="native_icon_mage">Ad Icon Image</string>
    <string name="native_main_image">Ad Main Image</string>
    <string name="sponsored">Sponsored</string>
    <string name="learn_more">Learn More</string>
    <string name="native_privacy_information_icon_image">Privacy Information Icon image</string>

    <!--Permissions-->
    <string name="permissions_title">Permissions</string>
    <string name="permission_strategy">Coinverse is continually working to improve the feed quality.</string>
    <string name="location_explanation">Enable location to help improve the feed.</string>
    <string name="got_it">Got it</string>

</resources>