<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_medium">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="@dimen/dialog_image"
            android:layout_height="@dimen/dialog_image"
            android:contentDescription="@string/profile_image"
            android:src="@drawable/ic_astronaut_color_accent_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/sign_in_title"
            android:textSize="@dimen/text_size_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileImage" />

        <TextView
            android:id="@+id/signInExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_explanation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/save_and_organize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_save_planet_dark_48dp"
            android:drawablePadding="@dimen/padding_small"
            android:gravity="center"
            android:paddingBottom="@dimen/padding_large"
            android:text="@string/save_and_organize"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signInExplanation" />

        <TextView
            android:id="@+id/signIn"
            style="@style/ButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/here_we_go"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/save_and_organize" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>