<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/appBar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|snap">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/padding_small"
                android:paddingRight="@dimen/padding_small">

                <ImageView
                    android:id="@+id/profileButton"
                    style="@style/ProfileIconButtonStyle"
                    android:layout_gravity="start"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/profile_content_description"
                    android:src="@drawable/ic_astronaut_color_accent_24dp"
                    android:tooltipText="@string/profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/appStatus"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/app_status"
                    android:textColor="@color/transparent"
                    android:tooltipText="@string/app_status_tools_tip"
                    app:layout_constraintBottom_toBottomOf="@id/submitBugButton"
                    app:layout_constraintLeft_toRightOf="@id/profileButton"
                    app:layout_constraintRight_toLeftOf="@+id/submitBugButton"
                    app:layout_constraintTop_toTopOf="@id/submitBugButton" />

                <ImageView
                    android:id="@+id/submitBugButton"
                    style="@style/IconButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/submit_bug_content_description"
                    android:src="@drawable/ic_bug"
                    android:tooltipText="@string/submit_bug"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <FrameLayout
            android:id="@+id/priceContainer"
            android:name="app.carpecoin.PriceDataFragment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/price_graph_height"
            app:layout_collapseMode="parallax"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>