<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_medium">

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="@dimen/dialog_image"
                android:layout_height="@dimen/dialog_image"
                android:contentDescription="@string/profile_image"
                android:src="@drawable/ic_astronaut_color_accent_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/sign_in_title"
                android:textSize="@dimen/text_size_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileImage" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <TextView
                android:id="@+id/save_and_organize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_coinverse_48dp"
                android:drawablePadding="@dimen/padding_small"
                android:gravity="start|center_vertical"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/save_and_organize"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/community"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_community_48dp"
                android:drawablePadding="@dimen/padding_small"
                android:gravity="start"
                android:paddingBottom="@dimen/padding_large"
                android:text="@string/community"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintLeft_toRightOf="@id/left_guideline"
                app:layout_constraintRight_toLeftOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/save_and_organize" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.85" />

            <TextView
                android:id="@+id/confirm"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/here_we_go"
                android:textSize="@dimen/text_size_normal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/community" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>