<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="app.coinverse.HomeViewModel" />

        <variable
            name="user"
            type="com.google.firebase.auth.FirebaseUser" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/profileFragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="app.coinverse.user.ProfileFragment">

        <include layout="@layout/toolbar" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.15" />

            <ImageView
                android:id="@+id/profieImage"
                android:layout_width="@dimen/profile_image"
                android:layout_height="@dimen/profile_image"
                android:contentDescription="@string/profile_image"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/guideline"
                app:profileImageUrl="@{user.photoUrl.toString()}" />

            <TextView
                android:id="@+id/dismissedContent"
                style="@style/ButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dismiss_color_primary_dark_24dp"
                android:drawablePadding="@dimen/padding_small"
                android:text="@string/dismisses"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profieImage" />

            <TextView
                android:id="@+id/signOut"
                style="@style/ButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                app:layout_constraintBottom_toTopOf="@id/delete"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/delete"
                style="@style/ButtonStyleSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
