<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="app.coinverse.priceGraph.PriceViewModel" />

        <variable
            name="exchange"
            type="app.coinverse.Enums.Exchange" />

        <variable
            name="orderType"
            type="app.coinverse.Enums.OrderType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main_constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="app.coinverse.MainActivity">

        <TextView
            android:id="@+id/pricePair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:padding="@dimen/padding_tiny"
            android:text="@{String.format(@string/price_pair_format, viewmodel.pricePair.BASE_CURRENCY, viewmodel.pricePair.QUOTE_CURRENCY)}"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/timeframe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_tiny"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pricePair" />

        <TextView
            android:id="@+id/priceSelected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_secondary_copy"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/timeframe" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceSelected" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/price_graph_constraint_guideline" />

        <TextView
            android:id="@+id/bidsToggle"
            style="@style/OrderToggleStyle"
            android:onClick="@{() -> viewmodel.orderToggle(orderType.BID)}"
            android:text="@string/bids"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graph" />

        <TextView
            android:id="@+id/asksToggle"
            style="@style/OrderToggleStyle"
            android:onClick="@{() -> viewmodel.orderToggle(orderType.ASK)}"
            android:text="@string/asks"
            app:layout_constraintBottom_toBottomOf="@id/bidsToggle"
            app:layout_constraintLeft_toRightOf="@id/bidsToggle" />

        <TextView
            android:id="@+id/maxBid"
            style="@style/OrderToggleStyle"
            android:text="@string/max_bid"
            app:layout_constraintRight_toLeftOf="@id/minAsk"
            app:layout_constraintTop_toBottomOf="@id/graph" />

        <TextView
            android:id="@+id/minAsk"
            style="@style/OrderToggleStyle"
            android:text="@string/min_ask"
            app:layout_constraintBottom_toBottomOf="@id/maxBid"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_price_graph"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="@dimen/price_graph_card_corner_radius"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/activity_main_constraint"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asksToggle">

            <!--TODO: Add recyclerview-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_price_constraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/coinbaseToggle"
                    style="@style/ButtonStyle"
                    android:onClick="@{() -> viewmodel.exchangeToggle(exchange.COINBASE)}"
                    android:text="@string/coinbase"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/binanceToggle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/binanceToggle"
                    style="@style/ButtonStyle"
                    android:onClick="@{() -> viewmodel.exchangeToggle(exchange.BINANCE)}"
                    android:text="@string/binance"
                    app:layout_constraintLeft_toRightOf="@+id/coinbaseToggle"
                    app:layout_constraintRight_toLeftOf="@id/geminiToggle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/geminiToggle"
                    style="@style/ButtonStyle"
                    android:onClick="@{() -> viewmodel.exchangeToggle(exchange.GEMINI)}"
                    android:text="@string/gemini"
                    app:layout_constraintLeft_toRightOf="@id/binanceToggle"
                    app:layout_constraintRight_toLeftOf="@id/kucoinToggle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/kucoinToggle"
                    style="@style/ButtonStyle"
                    android:onClick="@{() -> viewmodel.exchangeToggle(exchange.KUCOIN)}"
                    android:text="@string/kucoin"
                    app:layout_constraintLeft_toRightOf="@id/geminiToggle"
                    app:layout_constraintRight_toLeftOf="@id/krakenToggle"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/krakenToggle"
                    style="@style/ButtonStyle"
                    android:onClick="@{() -> viewmodel.exchangeToggle(exchange.KRAKEN)}"
                    android:text="@string/kraken"
                    app:layout_constraintLeft_toRightOf="@+id/kucoinToggle"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>